# loco-bench

./: .gitignore  README.md  astro.config.mjs  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: colmena.md  guide.md  index.md  quality-cliff.md  quality.md  tiers.md
docs-landing/: CNAME  index.html
docs/future/: context-length.md  multi-gpu.md  perceived-intelligence.md
docs/sources/: github.md  nblm-advancing-small-lm.md  nblm-methodology.md  nblm-resource-efficient-lm.md  nblm-small-but-mighty.md
docs/stylesheets/: extra.css
scripts/: convert_and_quantize.sh  download_models.sh  generate_chart_data.py  gpu-onboard.sh
src/content/docs/: bang-per-bit.md  colmena.md  guide.md  index.md  index.mdx  quality.md  speed.md  tiers.md
src/styles/: custom.css
